add own modules to poetry.toml and bugfixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["carlo.voss <carlo.voss@me.com>"]
 readme = "README.md"
+packages = [
+    { include = "src" },
+    { include = "config" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
