--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.11"
 pandas = "^2.2.1"
 seaborn = "^0.13.2"
 scikit-learn = "^1.4.1"
+statsmodels = "^0.14"
 
 [tool.poetry.group.dev]
 optional = true
