--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ numpy==1.26.4
 packaging==24.0
 pandas==2.2.1
 parso==0.8.3
+patsy==0.5.6
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.2.0
@@ -38,6 +39,7 @@ scipy==1.12.0
 seaborn==0.13.2
 six==1.16.0
 stack-data==0.6.3
+statsmodels==0.14.1
 threadpoolctl==3.3.0
 tornado==6.4
 traitlets==5.14.2
